rosPart/log/build_2024-06-22_22-29-23/robotController/stdout_stderr.log
running egg_info
writing ../../build/robotController/robotController.egg-info/PKG-INFO
writing dependency_links to ../../build/robotController/robotController.egg-info/dependency_links.txt
writing entry points to ../../build/robotController/robotController.egg-info/entry_points.txt
writing requirements to ../../build/robotController/robotController.egg-info/requires.txt
writing top-level names to ../../build/robotController/robotController.egg-info/top_level.txt
reading manifest file '../../build/robotController/robotController.egg-info/SOURCES.txt'
writing manifest file '../../build/robotController/robotController.egg-info/SOURCES.txt'
running build
running build_py
copying robotController/camera_control.py -> /home/mik/robotica2/Project_Robotica/rosPart/build/robotController/build/lib/robotController
running install
running install_lib
copying /home/mik/robotica2/Project_Robotica/rosPart/build/robotController/build/lib/robotController/camera_control.py -> /home/mik/robotica2/Project_Robotica/rosPart/install/robotController/lib/python3.10/site-packages/robotController
byte-compiling /home/mik/robotica2/Project_Robotica/rosPart/install/robotController/lib/python3.10/site-packages/robotController/camera_control.py to camera_control.cpython-310.pyc
running install_data
  File "/home/mik/robotica2/Project_Robotica/rosPart/install/robotController/lib/python3.10/site-packages/robotController/camera_control.py", line 33
    if __name__ == '__main__'
                             ^
SyntaxError: expected ':'

running install_egg_info
removing '/home/mik/robotica2/Project_Robotica/rosPart/install/robotController/lib/python3.10/site-packages/robotController-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/robotController/robotController.egg-info to /home/mik/robotica2/Project_Robotica/rosPart/install/robotController/lib/python3.10/site-packages/robotController-0.0.0-py3.10.egg-info
running install_scripts
Installing control_node script to /home/mik/robotica2/Project_Robotica/rosPart/install/robotController/lib/robotController
writing list of installed files to '/home/mik/robotica2/Project_Robotica/rosPart/build/robotController/install.log'
